--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
     "name": "node-red-cosmos-r2",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "A Node-RED custom node that connects to a Cosmos DB and performs create, update, read, delete, and upsert operations.",
     "main": "cosmos-r2.js",
+    "keywords": [
+      "node-red",
+      "cosmos",
+      "database",
+      "r2"
+    ],
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1"
     },
