--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "author": "Ricky Vaughn 2 <rickyvaughn2@gmail.com>",
     "license": "GPL 3.0",
     "dependencies": {
-      "@azure/cosmos": "^3.11.4",
+      "@azure/cosmos": "~3.9.0",
       "node-red": "^2.1.4"
     },
     "node-red": {
